[package]
name = "design_patterns"
version = "0.1.0"
authors = ["mduszewski <mduszewski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strategy = { path = "../strategy" }
observer = { path = "../observer" }
decorator = { path = "../decorator" }
factory_method = { path = "../factory_method" }
abstract_factory = { path = "../abstract_factory" }
command = { path = "../command" }
adapter = { path = "../adapter" }
proxy = { path = "../proxy" }